--- a/services/event-service/DockerFile
+++ b/services/event-service/DockerFile
@@ -3,32 +3,15 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-COPY tsconfig*.json ./
-COPY nest-cli.json ./
+# Copy service manifests
+COPY services/event-service/package*.json ./services/event-service/
+COPY services/event-service/tsconfig*.json ./services/event-service/
+COPY services/event-service/nest-cli.json ./services/event-service/
 
-# Install dependencies
-RUN npm install
-
-# Copy source code
-COPY src ./src
-
-# Build the application
-RUN npm run build
-
-# Stage 1: Build
-FROM node:20-alpine AS builder
+# Copy shared folder at root level
+COPY shared ./shared
 
 WORKDIR /app/services/event-service
-
-# Copy service manifests
-COPY services/event-service/package*.json ./
-COPY services/event-service/tsconfig*.json ./
-COPY services/event-service/nest-cli.json ./
-
-# Bring shared enums/types into build context
-COPY shared ./shared
 
 RUN npm install
 
@@ -42,7 +25,7 @@ FROM node:20-alpine
 WORKDIR /app/services/event-service
 
 COPY services/event-service/package*.json ./
-COPY shared ./shared
+COPY --from=builder /app/shared /app/shared
 
 RUN npm install --omit=dev
 
@@ -50,4 +33,4 @@ COPY --from=builder /app/services/event-service/dist ./dist
 
 EXPOSE 3001
 
-CMD ["node", "dist/src/main.js"]
+CMD ["node", "dist/services/event-service/src/main.js"]
