feature(user-service): integrate Prisma for database management
Updated package.json to include Prisma dependencies and removed redundant entries.

Added Prisma schema file to define the User model and database connection.

Modified app.module.ts to import PrismaModule for dependency injection.
Created PrismaModule to provide PrismaService globally.

Implemented PrismaService to manage database connections on module initialization and destruction.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,8 +81,8 @@ services:
     image: postgres:15
     container_name: postgres-users
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-pguser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-pgpass}
+      POSTGRES_USER: ${DATABASE_USER:-root}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-root}
       POSTGRES_DB: user_db
     ports:
       - "5436:5432"
