--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,10 +105,11 @@ services:
     environment:
       NODE_ENV: development
       PORT: 3005
+      DATABASE_URL: postgresql://${DATABASE_USER:-root}:${DATABASE_PASSWORD:-root}@postgres-users:5432/user_db
       DATABASE_HOST: postgres-users
       DATABASE_PORT: 5432
-      DATABASE_USER: ${POSTGRES_USER:-pguser}
-      DATABASE_PASSWORD: ${POSTGRES_PASSWORD:-pgpass}
+      DATABASE_USER: ${DATABASE_USER:-root}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD:-root}
       DATABASE_NAME: user_db
       JWT_SECRET: ${JWT_SECRET:-your_super_secret_jwt_key}
       JWT_EXPIRES_IN: 7d
