--- a/services/user-service/DockerFile
+++ b/services/user-service/DockerFile
@@ -10,7 +10,9 @@ COPY nest-cli.json ./
 RUN npm install
 
 COPY src ./src
+COPY prisma ./prisma
 
+RUN npx prisma generate
 RUN npm run build
 
 # Stage 2: Production
@@ -23,6 +25,10 @@ COPY package*.json ./
 RUN npm install --omit=dev
 
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+COPY prisma ./prisma
+
+RUN npx prisma generate
 
 EXPOSE 3005
 
