--- a/services/user-service/DockerFile
+++ b/services/user-service/DockerFile
@@ -1,35 +1,23 @@
-# Stage 1: Build
-FROM node:20-alpine AS builder
-
-WORKDIR /app
-
-COPY package*.json ./
-COPY tsconfig*.json ./
-COPY nest-cli.json ./
-
-RUN npm install
-
-COPY src ./src
-COPY prisma ./prisma
-
-RUN npx prisma generate
-RUN npm run build
-
-# Stage 2: Production
 FROM node:20-alpine
 
 WORKDIR /app
 
+# Copier les fichiers de configuration package
 COPY package*.json ./
+COPY tsconfig*.json ./
+COPY nest-cli.json ./
 
-RUN npm install --omit=dev
+# Installer les dépendances
+RUN npm install
 
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+# Copier le schéma Prisma et générer le client
 COPY prisma ./prisma
-
 RUN npx prisma generate
+
+# Copier tout le code source
+COPY src ./src
 
 EXPOSE 3005
 
-CMD ["node", "dist/main.js"]
+# Utiliser le mode développement avec watch
+CMD ["npm", "run", "start:dev"]
