fix: adding environment variables to the .env.example at the root of the project

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@ POSTGRES_USER=pguser
 POSTGRES_PASSWORD=pgpass
 POSTGRES_DB=eventsdb
 
+#DATABASE USER
+DATABASE_USER=root
+DATABASE_PASSWORD=root
+DATABASE_NAME=user_db
+
+
 # RabbitMQ
 RABBITMQ_USER=user
 RABBITMQ_PASS=password
