--- a/services/ticket-service/package.json
+++ b/services/ticket-service/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/microservices": "^11.0.1",
+    "axios": "^1.6.0",
     "typeorm": "^0.3.19",
     "pg": "^8.11.3",
     "amqplib": "^0.10.3",
