fix: add entrypoint script, update Dockerfile for user service, and add DATABASE_URL

--- a/services/user-service/.env.example
+++ b/services/user-service/.env.example
@@ -4,9 +4,11 @@ PORT=3005
 # Database
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=pguser
-DATABASE_PASSWORD=pgpass
+DATABASE_USER=root
+DATABASE_PASSWORD=root
 DATABASE_NAME=user_db
+
+DATABASE_URL=postgresql://root:root@localhost:5436/user_db?schema=public
 
 # JWT
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
