--- a/services/payment-service/DockerFile
+++ b/services/payment-service/DockerFile
@@ -3,27 +3,34 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
-COPY tsconfig*.json ./
-COPY nest-cli.json ./
+# Copy service manifests
+COPY services/payment-service/package*.json ./services/payment-service/
+COPY services/payment-service/tsconfig*.json ./services/payment-service/
+COPY services/payment-service/nest-cli.json ./services/payment-service/
+
+# Copy shared folder at root level
+COPY shared ./shared
+
+WORKDIR /app/services/payment-service
 
 RUN npm install
 
-COPY src ./src
+COPY services/payment-service/src ./src
 
 RUN npm run build
 
 # Stage 2: Production
 FROM node:20-alpine
 
-WORKDIR /app
+WORKDIR /app/services/payment-service
 
-COPY package*.json ./
+COPY services/payment-service/package*.json ./
+COPY --from=builder /app/shared /app/shared
 
 RUN npm install --omit=dev
 
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/services/payment-service/dist ./dist
 
 EXPOSE 3003
 
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/services/payment-service/src/main.js"]
