--- a/services/event-service/package.json
+++ b/services/event-service/package.json
@@ -21,19 +21,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
     "@nestjs/config": "^4.0.0",
-    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.0.1",
-    "typeorm": "^0.3.19",
-    "pg": "^8.11.3",
-    "amqplib": "^0.10.3",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.3",
+    "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
-    "class-validator": "^0.14.0",
+    "amqplib": "^0.10.3",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -41,11 +43,11 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/amqplib": "^0.10.4",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
-    "@types/amqplib": "^0.10.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
